@@ -1358,13 +1358,264 @@ total = eden + 1个survivor
 
 如果有一个系统，内存一直消耗不超过10%，但是观察日志，发现FGC总是频繁产生，会是什么原因引起的？
 
+### 8. 解决JVM运行中遇到的问题
 
+#### 1. 一个案例理解常用工具
 
+1. demo示例
 
+   ```java
+   import java.math.BigDecimal;
+   import java.util.ArrayList;
+   import java.util.Date;
+   import java.util.List;
+   import java.util.concurrent.ScheduledThreadPoolExecutor;
+   import java.util.concurrent.ThreadPoolExecutor;
+   import java.util.concurrent.TimeUnit;
+   
+   /**
+    * 从数据库中读取信用数据，套用模型，并把结果进行记录和传输
+    */
+   public class T15_FullGC_Problem01 {
+       private static class CardInfo {
+           BigDecimal price = new BigDecimal(0.0);
+           String name = "张三";
+           int age = 5;
+           Date birthdate = new Date();
+           public void m() {
+           }
+       }
+       private static ScheduledThreadPoolExecutor executor = new ScheduledThreadPoolExecutor(50, new ThreadPoolExecutor.DiscardOldestPolicy());
+       
+       public static void main(String[] args) throws Exception {
+           executor.setMaximumPoolSize(50);
+           for (;;){
+               modelFit();
+               Thread.sleep(100);
+           }
+       }
+       private static void modelFit(){
+           List<CardInfo> taskList = getAllCardInfo();
+           taskList.forEach(info -> {
+               // do something
+               executor.scheduleWithFixedDelay(() -> {
+                   //do sth with info
+                   info.m();
+               }, 2, 3, TimeUnit.SECONDS);
+           });
+       }
+       private static List<CardInfo> getAllCardInfo(){
+           List<CardInfo> taskList = new ArrayList<>();
+           for (int i = 0; i < 100; i++) {
+               CardInfo ci = new CardInfo();
+               taskList.add(ci);
+           }
+           return taskList;
+       }
+   }
+   ```
 
+2. java -Xms200M -Xmx200M -XX:+PrintGC com.mashibing.jvm.gc.T15_FullGC_Problem01
 
+3. 一般是运维团队首先受到报警信息（CPU Memory）
 
+4. top命令观察到问题：内存不断增长 CPU占用率居高不下
 
+5. top -Hp 观察进程中的线程，哪个线程CPU和内存占比高
+
+6. jps定位具体java进程
+
+   ```java
+   jstack 进程id/或者(--top -Hp 列表pid转换成16进制) 定位线程状况，重点关注：WAITING BLOCKED
+   eg.
+   waiting on <0x0000000088ca3310> (a java.lang.Object)
+   假如有一个进程中100个线程，很多线程都在waiting on <xx>，一定要找到是哪个线程持有这把锁。
+   怎么找？搜索jstack dump的信息，找<xx>，看哪个线程持有这把锁(这个线程状态很可能是RUNNABLE)
+   demo：1：写一个死锁程序，用jstack观察 2 ：写一个程序，一个线程持有锁不释放，其他线程等待
+   ```
+
+7. 为什么阿里规范里规定，线程的名称（尤其是线程池）都要写有意义的名称
+
+   怎么样自定义线程池里的线程名称？（自定义ThreadFactory）
+
+8. jinfo pid 
+
+9. jstat -gc 动态观察gc情况 / 阅读GC日志发现频繁GC / arthas观察 / jconsole / jvisualVM / Jprofiler（最好用）
+
+   jstat -gc pid 毫秒数 : 每个500个毫秒打印GC的情况
+
+   ```java
+   如果面试官问你是怎么定位OOM问题的？如果你回答用图形界面（错误）
+   1：已经上线的系统不用图形界面用什么？（cmdline arthas）
+   2：图形界面到底用在什么地方？测试！测试的时候进行监控！（压测观察）
+   ```
+
+10. jmap -histo 4655 | head -20，查找有多少对象产生
+
+11. jmap -dump:format=b,file=xxx pid（手动导出堆转储文件）
+
+    <font color="red">**线上系统，内存特别大，jmap导出堆转储文件执行期间会对进程产生很大影响**</font>
+
+    ```java
+    1. 设定了参数HeapDump，OOM的时候会自动产生堆转储文件（其次）
+    2. 很多服务器备份（高可用），停掉这台服务器对其他服务器不影响（最好）
+    3. 在线定位：arthas（一般小点儿的公司用不到）
+    ```
+
+12. java -Xms20M -Xmx20M -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError  com.mashibing.jvm.gc.T15_FullGC_Problem01
+
+13. 使用MAT / jhat /jvisualvm 进行dump文件分析
+
+    ```java
+    https://www.cnblogs.com/baihuitestsoftware/articles/6406271.html 
+    jhat -J-mx512M xxx.dump
+    http://192.168.17.11:7000
+    拉到最后：找到对应链接
+    可以使用OQL查找特定问题对象
+    ```
+
+14. 找到代码的问题
+
+#### 2. jconsole远程连接
+
+1. 程序启动加入参数：
+
+   ```java
+   java -Djava.rmi.server.hostname=192.168.1.102 -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=11111 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false XXX
+   ```
+
+2. 如果遭遇 Local host name unknown：XXX的错误，修改/etc/hosts文件，把XXX加入进去
+
+   ```java
+   192.168.17.11 basic localhost localhost.localdomain localhost4 localhost4.localdomain4
+   ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
+   ```
+
+3. 关闭linux防火墙（实战中应该打开对应端口）
+
+   ```shell
+   service iptables stop
+   chkconfig iptables off #永久关闭
+   ```
+
+4. windows上打开 jconsole远程连接 192.168.1.102:11111
+
+#### 3. jvisualvm远程连接
+
+ https://www.cnblogs.com/liugh/p/7620336.html （简单做法）
+
+#### 4. jprofiler (收费)
+
+#### 5. arthas在线排查工具
+
+1. 为什么需要在线排查？
+
+   > 在生产上我们经常会碰到一些不好排查的问题，例如线程安全问题，用最简单的threaddump或者heapdump不好查到问题原因。为了排查这些问题，有时我们会临时加一些日志，比如在一些关键的函数里打印出入参，然后重新打包发布，如果打了日志还是没找到问题，继续加日志，重新打包发布。对于上线流程复杂而且审核比较严的公司，从改代码到上线需要层层的流转，会大大影响问题排查的进度。 
+
+2. jvm观察jvm信息
+
+3. thread定位线程问题
+
+4. dashboard 观察系统情况
+
+5. heapdump + jhat分析
+
+6. jad反编译
+
+   - 动态代理生成类的问题定位
+   - 第三方的类（观察代码）
+   - 版本问题（确定自己最新提交的版本是不是被使用）
+
+7. redefine 热替换
+
+   - 目前有些限制条件：只能改方法实现（方法已经运行完成），不能改方法名， 不能改属性
+     m() -> mm()
+
+8. sc  - search class
+
+9. watch  - watch method
+
+10. 没有包含的功能：jmap
 
 ## JVM常见参数
+
+## JVM常见问题
+
+### 1. 内存溢出的几种情况
+
+> https://www.cnblogs.com/chbin/p/10656566.html
+
+#### 1. 堆栈溢出
+
+##### 报错关键信息
+
+1. java.lang.OutOfMemoryError: ......java heap space.....
+2. java.lang.OutOfMemoryError:GC over head limit exceeded
+
+##### 原因及解决方案
+
+1. 当代码没有问题的情况下，适当调整-Xmx和-Xms是可以避免的；为什么会溢出呢，要么代码有问题，要么访问量太多并且每个访问的时间太长或者数据太多，导致数据释放不掉，因为垃圾回收器是要找到那些是垃圾才能回收，这里它不会认为这些东西是垃圾，自然不会去回收了
+2. 这种情况是当系统处于高频的GC状态，而且回收的效果依然不佳的情况，就会开始报这个错误，这种情况一般是产生了很多不可以被释放的对象，有可能是引用使用不当导致，或申请大对象导致
+
+#### 2. Method Area的溢出
+
+##### 报错关键信息
+
+1. java.lang.OutOfMemoryError: PermGen space（JDK1.7之前）
+2. 
+
+##### 原因及解决方案
+
+1. 系统的代码非常多或引用的第三方包非常多、或代码中使用了大量的常量、或通过intern注入常量、或者通过动态代码加载等方法，导致常量池的膨胀；增加-XX:PermSize和-XX:MaxPermSize的大小。
+2. 
+
+#### 3. 直接内存溢出
+
+> 在使用ByteBuffer中的allocateDirect()的时候会用到（经常发生于JavaNIO框架中）。
+
+##### 报错关键信息
+
+java.lang.OutOfMemoryError: Direct buffer memory
+
+##### 原因及解决方案
+
+如果你在直接或间接使用了ByteBuffer中的allocateDirect方法的时候，而不做clear的时候就会出现类似的问题；直接内存就是由OS和应用程序共同管理的，JVM垃圾回收不会回收掉直接内存的这部分内存，所以需要注意。
+
+**如果经常有类似的操作，可以考虑设置参数：-XX:MaxDirectMemorySize**
+
+#### 4. 线程的内存空间溢出
+
+##### 报错关键信息
+
+java.lang.StackOverflowError
+
+##### 原因及解决方案
+
+这个参数直接说明一个内容，就是-Xss太小了，我们申请很多局部调用的栈针等内容是存放在用户当前所持有的线程中的，线程在jdk 1.4以前默认是256K，1.5以后是1M，如果报这个错，只能说明-Xss设置得太小，当然有些厂商的JVM不是这个参数，本文仅仅针对Hotspot VM而已；不过在有必要的情况下可以对系统做一些优化，使得-Xss的值是可用的。
+
+#### 5. 无法创建本地线程
+
+##### 报错关键信息
+
+java.lang.OutOfMemoryError: unable to create new native thread
+
+##### 原因及解决方案
+
+当JVM向OS申请创建线程，而OS不能分配一个本地线程时抛出。增加linux最大线程数及打开文件最大数。
+
+#### 6. 地址空间不够
+
+##### 报错关键信息
+
+java.lang.OutOfMemoryError: request {} byte for {}out of swap
+
+##### 原因及解决方案
+
+这类错误一般是由于地址空间不够而导致。
+
+### 2. 
+
+
+
+
 
